--- a/PatientPortal/PatientPortal.csproj
+++ b/PatientPortal/PatientPortal.csproj
@@ -77,6 +77,7 @@
     <Content Include="MyInsurance.aspx" />
     <Content Include="MyForms.aspx" />
     <Content Include="MyCharts.aspx" />
+    <Content Include="RequestRefill.aspx" />
     <Content Include="RequestAppointments.aspx" />
     <Content Include="MyMessages.aspx" />
     <Content Include="MyAppointments.aspx" />
@@ -386,6 +387,13 @@
     </Compile>
     <Compile Include="MyCharts.aspx.designer.cs">
       <DependentUpon>MyCharts.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="RequestRefill.aspx.cs">
+      <DependentUpon>RequestRefill.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RequestRefill.aspx.designer.cs">
+      <DependentUpon>RequestRefill.aspx</DependentUpon>
     </Compile>
     <Compile Include="RequestAppointments.aspx.cs">
       <DependentUpon>RequestAppointments.aspx</DependentUpon>
