--- a/PatientPortal/PatientPortal.csproj
+++ b/PatientPortal/PatientPortal.csproj
@@ -73,6 +73,9 @@
     <Content Include="Content\css\steps.css" />
     <Content Include="Content\css\sweetalert2.min.css" />
     <Content Include="Content\css\tab-page.css" />
+    <Content Include="Content\images\orangeappointment.png" />
+    <Content Include="Content\images\orangeemail.png" />
+    <Content Include="Content\images\orangerefill.png" />
     <Content Include="Content\js\dataTables.responsive.min.js" />
     <Content Include="Content\js\jquery.dataTables.min.js" />
     <Content Include="Content\js\jquery.steps.min.js" />
